Pushing new version of website-diag

--- a/publications/apru19/index.html
+++ b/publications/apru19/index.html
@@ -8,7 +8,7 @@
     <link rel="canonical" href="https://beta.diagnijmegen.nl/publications/apru19/">
 
 
-    <title>Robust and accurate quantification of biomarkers of immune cells in lung cancer micro-environment using deep convolutional neural networks. - Diagnostic Image Analysis Group</title>
+    <title>Robust and accurate quantification of biomarkers of immune cells in lung cancer micro-environment using deep convolutional neural networks - Diagnostic Image Analysis Group</title>
 
 
     <!-- Search Engine -->
@@ -16,19 +16,19 @@
     <meta name="image" content="">
 
     <!-- Schema.org for Google -->
-    <meta itemprop="name" content="Robust and accurate quantification of biomarkers of immune cells in lung cancer micro-environment using deep convolutional neural networks. - Diagnostic Image Analysis Group">
+    <meta itemprop="name" content="Robust and accurate quantification of biomarkers of immune cells in lung cancer micro-environment using deep convolutional neural networks - Diagnostic Image Analysis Group">
     <meta itemprop="description" content="">
     <meta itemprop="image" content="">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="Robust and accurate quantification of biomarkers of immune cells in lung cancer micro-environment using deep convolutional neural networks. - Diagnostic Image Analysis Group">
+    <meta name="twitter:title" content="Robust and accurate quantification of biomarkers of immune cells in lung cancer micro-environment using deep convolutional neural networks - Diagnostic Image Analysis Group">
     <meta name="twitter:description" content="">
     <meta name="twitter:creator" content="@diagnijmegen">
     <meta name="twitter:image:src" content="">
 
     <!-- Open Graph general (Facebook, Pinterest & Google+) -->
-    <meta property="og:title" content="Robust and accurate quantification of biomarkers of immune cells in lung cancer micro-environment using deep convolutional neural networks. - Diagnostic Image Analysis Group">
+    <meta property="og:title" content="Robust and accurate quantification of biomarkers of immune cells in lung cancer micro-environment using deep convolutional neural networks - Diagnostic Image Analysis Group">
     <meta property="og:description" content="">
     <meta property="og:image" content="">
     <meta property="og:site_name" content="Diagnostic Image Analysis Group">
@@ -241,12 +241,12 @@
       <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="https://beta.diagnijmegen.nl/">Home</a></li>
         <li class="breadcrumb-item"><a href="https://beta.diagnijmegen.nl/publications/">Publications</a></li>
-        <li class="breadcrumb-item">Robust and accurate quantification of biomarkers of immune cells in lung cancer micro-environment using deep convolutional neural networks.</li>
+        <li class="breadcrumb-item">Robust and accurate quantification of biomarkers of immune cells in lung cancer micro-environment using deep convolutional neural networks</li>
       </ol>
     </nav>
 </div>
     <div class="container">
-    <h1 class="page-title">Robust and accurate quantification of biomarkers of immune cells in lung cancer micro-environment using deep convolutional neural networks.</h1>
+    <h1 class="page-title">Robust and accurate quantification of biomarkers of immune cells in lung cancer micro-environment using deep convolutional neural networks</h1>
 
     <p class="lead">
             L. Aprupe,             G. Litjens,             T.J. Brinker,             J. van der Laak and N. Grabe    </p>
@@ -260,6 +260,11 @@
     <p>Recent years have seen a growing awareness of the role the immune system plays in successful cancer treatment, especially in novel therapies like immunotherapy. The characterization of the immunological composition of tumors and their micro-environment is thus becoming a necessity. In this paper we introduce a deep learning-based immune cell detection and quantification method, which is based on supervised learning, i.e., the input data for training comprises labeled images. Our approach objectively deals with staining variation and staining artifacts in immunohistochemically stained lung cancer tissue and is as precise as humans. This is evidenced by the low cell count difference to humans of 0.033 cells on average. This method, which is based on convolutional neural networks, has the potential to provide a new quantitative basis for research on immunotherapy.</p>
 
 
+    <h2>Request PDF</h2>
+
+    <p>A pdf file of this publication is available for personal use. Enter your e-mail address in the box below and press the button. You will receive an e-mail message with a link to the pdf file. Note: for this service you will be redirected to our PDF-service at <a href="www.radboudimaging.nl">radboudimaging.nl</a>.
+
+    <form method="post" action="http://shared.radboudimaging.nl/mediawiki/publication/confirmemail.php?bibkey=apru19&amp;ip=__USERIP__"><input type="text" name="email" size="50"><input type="submit" value="Send code by e-mail"></form>
     </div>
     </main>
 
