--- a/publications/deba16a/index.html
+++ b/publications/deba16a/index.html
@@ -8,7 +8,7 @@
     <link rel="canonical" href="https://beta.diagnijmegen.nl/publications/deba16a/">
 
 
-    <title>Intranodal signal suppression in pelvic MR lymphography of prostate cancer patients: a quantitative comparison of ferumoxtran-10 and ferumoxytol. - Diagnostic Image Analysis Group</title>
+    <title>Intranodal signal suppression in pelvic MR lymphography of prostate cancer patients: a quantitative comparison of ferumoxtran-10 and ferumoxytol - Diagnostic Image Analysis Group</title>
 
 
     <!-- Search Engine -->
@@ -16,19 +16,19 @@
     <meta name="image" content="">
 
     <!-- Schema.org for Google -->
-    <meta itemprop="name" content="Intranodal signal suppression in pelvic MR lymphography of prostate cancer patients: a quantitative comparison of ferumoxtran-10 and ferumoxytol. - Diagnostic Image Analysis Group">
+    <meta itemprop="name" content="Intranodal signal suppression in pelvic MR lymphography of prostate cancer patients: a quantitative comparison of ferumoxtran-10 and ferumoxytol - Diagnostic Image Analysis Group">
     <meta itemprop="description" content="">
     <meta itemprop="image" content="">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="Intranodal signal suppression in pelvic MR lymphography of prostate cancer patients: a quantitative comparison of ferumoxtran-10 and ferumoxytol. - Diagnostic Image Analysis Group">
+    <meta name="twitter:title" content="Intranodal signal suppression in pelvic MR lymphography of prostate cancer patients: a quantitative comparison of ferumoxtran-10 and ferumoxytol - Diagnostic Image Analysis Group">
     <meta name="twitter:description" content="">
     <meta name="twitter:creator" content="@diagnijmegen">
     <meta name="twitter:image:src" content="">
 
     <!-- Open Graph general (Facebook, Pinterest & Google+) -->
-    <meta property="og:title" content="Intranodal signal suppression in pelvic MR lymphography of prostate cancer patients: a quantitative comparison of ferumoxtran-10 and ferumoxytol. - Diagnostic Image Analysis Group">
+    <meta property="og:title" content="Intranodal signal suppression in pelvic MR lymphography of prostate cancer patients: a quantitative comparison of ferumoxtran-10 and ferumoxytol - Diagnostic Image Analysis Group">
     <meta property="og:description" content="">
     <meta property="og:image" content="">
     <meta property="og:site_name" content="Diagnostic Image Analysis Group">
@@ -241,12 +241,12 @@
       <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="https://beta.diagnijmegen.nl/">Home</a></li>
         <li class="breadcrumb-item"><a href="https://beta.diagnijmegen.nl/publications/">Publications</a></li>
-        <li class="breadcrumb-item">Intranodal signal suppression in pelvic MR lymphography of prostate cancer patients: a quantitative comparison of ferumoxtran-10 and ferumoxytol.</li>
+        <li class="breadcrumb-item">Intranodal signal suppression in pelvic MR lymphography of prostate cancer patients: a quantitative comparison of ferumoxtran-10 and ferumoxytol</li>
       </ol>
     </nav>
 </div>
     <div class="container">
-    <h1 class="page-title">Intranodal signal suppression in pelvic MR lymphography of prostate cancer patients: a quantitative comparison of ferumoxtran-10 and ferumoxytol.</h1>
+    <h1 class="page-title">Intranodal signal suppression in pelvic MR lymphography of prostate cancer patients: a quantitative comparison of ferumoxtran-10 and ferumoxytol</h1>
 
     <p class="lead">
             O.A. Debats,             A.S. Fortuin,             H.J.M. Meijer,             T. Hambrock,             G.J.S. Litjens,             J.O. Barentsz and H.J. Huisman    </p>
@@ -260,6 +260,11 @@
     <p>The key to MR lymphography is suppression of T2<em> MR signal in normal lymph nodes, while retaining high signal in metastatic nodes. Our objective is to quantitatively compare the ability of ferumoxtran-10 and ferumoxytol to suppress the MR signal in normal pelvic lymph nodes. In 2010, a set of consecutive patients who underwent intravenous MR Lymphography (MRL) were included. Signal suppression in normal lymph nodes in T2</em>-weighted images due to uptake of USPIO (Ultra-Small Superparamagnetic Particles of Iron Oxide) was quantified. Signal suppression by two USPIO contrast agents, ferumoxtran-10 and ferumoxytol was compared using Wilcoxon's signed rank test. Forty-four patients were included, of which all 44 had a ferumoxtran-10 MRL and 4 had additionally a ferumoxytol MRL. A total of 684 lymph nodes were identified in the images, of which 174 had been diagnosed as metastatic. USPIO-induced signal suppression in normal lymph nodes was significantly stronger in ferumoxtran-10 MRL than in ferumoxytol MRL (p &lt; 0.005). T2* signal suppression in normal pelvic lymph nodes is significantly stronger with ferumoxtran-10 than with ferumoxytol, which may affect diagnostic accuracy.</p>
 
 
+    <h2>Request PDF</h2>
+
+    <p>A pdf file of this publication is available for personal use. Enter your e-mail address in the box below and press the button. You will receive an e-mail message with a link to the pdf file. Note: for this service you will be redirected to our PDF-service at <a href="www.radboudimaging.nl">radboudimaging.nl</a>.
+
+    <form method="post" action="http://shared.radboudimaging.nl/mediawiki/publication/confirmemail.php?bibkey=deba16a&amp;ip=__USERIP__"><input type="text" name="email" size="50"><input type="submit" value="Send code by e-mail"></form>
     </div>
     </main>
 
