--- a/publications/oei17a/index.html
+++ b/publications/oei17a/index.html
@@ -8,7 +8,7 @@
     <link rel="canonical" href="https://beta.diagnijmegen.nl/publications/oei17a/">
 
 
-    <title>Interleaving cerebral CT perfusion with neck CT angiography part I. Proof of concept and accuracy of cerebral perfusion values. - Diagnostic Image Analysis Group</title>
+    <title>Interleaving cerebral CT perfusion with neck CT angiography part I. Proof of concept and accuracy of cerebral perfusion values - Diagnostic Image Analysis Group</title>
 
 
     <!-- Search Engine -->
@@ -16,19 +16,19 @@
     <meta name="image" content="">
 
     <!-- Schema.org for Google -->
-    <meta itemprop="name" content="Interleaving cerebral CT perfusion with neck CT angiography part I. Proof of concept and accuracy of cerebral perfusion values. - Diagnostic Image Analysis Group">
+    <meta itemprop="name" content="Interleaving cerebral CT perfusion with neck CT angiography part I. Proof of concept and accuracy of cerebral perfusion values - Diagnostic Image Analysis Group">
     <meta itemprop="description" content="">
     <meta itemprop="image" content="">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="Interleaving cerebral CT perfusion with neck CT angiography part I. Proof of concept and accuracy of cerebral perfusion values. - Diagnostic Image Analysis Group">
+    <meta name="twitter:title" content="Interleaving cerebral CT perfusion with neck CT angiography part I. Proof of concept and accuracy of cerebral perfusion values - Diagnostic Image Analysis Group">
     <meta name="twitter:description" content="">
     <meta name="twitter:creator" content="@diagnijmegen">
     <meta name="twitter:image:src" content="">
 
     <!-- Open Graph general (Facebook, Pinterest & Google+) -->
-    <meta property="og:title" content="Interleaving cerebral CT perfusion with neck CT angiography part I. Proof of concept and accuracy of cerebral perfusion values. - Diagnostic Image Analysis Group">
+    <meta property="og:title" content="Interleaving cerebral CT perfusion with neck CT angiography part I. Proof of concept and accuracy of cerebral perfusion values - Diagnostic Image Analysis Group">
     <meta property="og:description" content="">
     <meta property="og:image" content="">
     <meta property="og:site_name" content="Diagnostic Image Analysis Group">
@@ -241,12 +241,12 @@
       <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="https://beta.diagnijmegen.nl/">Home</a></li>
         <li class="breadcrumb-item"><a href="https://beta.diagnijmegen.nl/publications/">Publications</a></li>
-        <li class="breadcrumb-item">Interleaving cerebral CT perfusion with neck CT angiography part I. Proof of concept and accuracy of cerebral perfusion values.</li>
+        <li class="breadcrumb-item">Interleaving cerebral CT perfusion with neck CT angiography part I. Proof of concept and accuracy of cerebral perfusion values</li>
       </ol>
     </nav>
 </div>
     <div class="container">
-    <h1 class="page-title">Interleaving cerebral CT perfusion with neck CT angiography part I. Proof of concept and accuracy of cerebral perfusion values.</h1>
+    <h1 class="page-title">Interleaving cerebral CT perfusion with neck CT angiography part I. Proof of concept and accuracy of cerebral perfusion values</h1>
 
     <p class="lead">
             M.T.H. Oei,             F.J.A. Meijer,             W. van der Woude,             E.J. Smit,             B. van Ginneken,             M. Prokop and R. Manniesing    </p>
@@ -260,6 +260,11 @@
     <p>We present a novel One-Step-Stroke protocol for wide-detector CT scanners that interleaves cerebral CTP with volumetric neck CTA (vCTA). We evaluate whether the resulting time gap in CTP affects the accuracy of CTP values. Cerebral CTP maps were retrospectively obtained from 20 patients with suspicion of acute ischemic stroke and served as the reference standard. To simulate a 4 s gap for interleaving CTP with vCTA, we eliminated one acquisition at various time points of CTP starting from the bolus-arrival-time(BAT). Optimal timing of the vCTA was evaluated. At the time point with least errors, we evaluated elimination of a second time point (6 s gap). Mean absolute percentage errors of all perfusion values remained below 10 % in all patients when eliminating any one time point in the CTP sequence starting from the BAT. Acquiring the vCTA 2 s after reaching a threshold of 70HU resulted in the lowest errors (mean &lt;3.0 %). Eliminating a second time point still resulted in mean errors &lt;3.5 %. CBF/CBV showed no significant differences in perfusion values except MTT. However, the percentage errors were always below 10 % compared to the original protocol. Interleaving cerebral CTP with neck CTA is feasible with minor effects on the perfusion values.</p>
 
 
+    <h2>Request PDF</h2>
+
+    <p>A pdf file of this publication is available for personal use. Enter your e-mail address in the box below and press the button. You will receive an e-mail message with a link to the pdf file. Note: for this service you will be redirected to our PDF-service at <a href="www.radboudimaging.nl">radboudimaging.nl</a>.
+
+    <form method="post" action="http://shared.radboudimaging.nl/mediawiki/publication/confirmemail.php?bibkey=oei17a&amp;ip=__USERIP__"><input type="text" name="email" size="50"><input type="submit" value="Send code by e-mail"></form>
     </div>
     </main>
 
