--- a/publications/valk19a/index.html
+++ b/publications/valk19a/index.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="canonical" href="https://beta.diagnijmegen.nl/publications/cast17/">
+    <link rel="canonical" href="https://beta.diagnijmegen.nl/publications/valk19a/">
 
 
-    <title>Two Algorithms for High-throughput and Multi-parametric Quantification of Drosophila Neuromuscular Junction Morphology - Diagnostic Image Analysis Group</title>
+    <title>Highly variable disease courses in siblings with Stargardt disease - Diagnostic Image Analysis Group</title>
 
 
     <!-- Search Engine -->
@@ -16,19 +16,19 @@
     <meta name="image" content="">
 
     <!-- Schema.org for Google -->
-    <meta itemprop="name" content="Two Algorithms for High-throughput and Multi-parametric Quantification of Drosophila Neuromuscular Junction Morphology - Diagnostic Image Analysis Group">
+    <meta itemprop="name" content="Highly variable disease courses in siblings with Stargardt disease - Diagnostic Image Analysis Group">
     <meta itemprop="description" content="">
     <meta itemprop="image" content="">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="Two Algorithms for High-throughput and Multi-parametric Quantification of Drosophila Neuromuscular Junction Morphology - Diagnostic Image Analysis Group">
+    <meta name="twitter:title" content="Highly variable disease courses in siblings with Stargardt disease - Diagnostic Image Analysis Group">
     <meta name="twitter:description" content="">
     <meta name="twitter:creator" content="@diagnijmegen">
     <meta name="twitter:image:src" content="">
 
     <!-- Open Graph general (Facebook, Pinterest & Google+) -->
-    <meta property="og:title" content="Two Algorithms for High-throughput and Multi-parametric Quantification of Drosophila Neuromuscular Junction Morphology - Diagnostic Image Analysis Group">
+    <meta property="og:title" content="Highly variable disease courses in siblings with Stargardt disease - Diagnostic Image Analysis Group">
     <meta property="og:description" content="">
     <meta property="og:image" content="">
     <meta property="og:site_name" content="Diagnostic Image Analysis Group">
@@ -241,30 +241,24 @@
       <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="https://beta.diagnijmegen.nl/">Home</a></li>
         <li class="breadcrumb-item"><a href="https://beta.diagnijmegen.nl/publications/">Publications</a></li>
-        <li class="breadcrumb-item">Two Algorithms for High-throughput and Multi-parametric Quantification of Drosophila Neuromuscular Junction Morphology</li>
+        <li class="breadcrumb-item">Highly variable disease courses in siblings with Stargardt disease</li>
       </ol>
     </nav>
 </div>
     <div class="container">
-    <h1 class="page-title">Two Algorithms for High-throughput and Multi-parametric Quantification of Drosophila Neuromuscular Junction Morphology</h1>
+    <h1 class="page-title">Highly variable disease courses in siblings with Stargardt disease</h1>
 
     <p class="lead">
-            A. Castells-Nobau,             B. Nijhof,             I. Eidhof,             L. Wolf,             J.M. Scheffer-de Gooyert,             I. Monedero,             L. Torroja,             J.A.W.M. van der Laak and A. Schenck    </p>
+            D. Valkenburg,             E.H. Runhart,             N.M. Bax,             B. Liefers,             S.L. Lambertus,             C.I. Sánchez,             F.P. Cremers and C.B. Hoyng    </p>
 
-    <p><i>JoVE</i> 2017;123:1-13</p>
+    <p><i>Ophthalmology</i> 2019</p>
     <p>
-            <a href="https://doi.org/10.3791/55395 (2017)." class="btn btn-primary">DOI</a>
-            <a href="https://www.jove.com/video/55395" class="btn btn-primary">URL</a>
+            <a href="https://doi.org/10.1016/j.ophtha.2019.07.010" class="btn btn-primary">DOI</a>
     </p>
     <h2>Abstract</h2>
-    <p>Synaptic morphology is tightly related to synaptic efficacy, and in many cases morphological synapse defects ultimately lead to synaptic malfunction. The Drosophila larval neuromuscular junction (NMJ), a well-established model for glutamatergic synapses, has been extensively studied for decades. Identification of mutations causing NMJ morphological defects revealed a repertoire of genes that regulate synapse development and function. Many of these were identified in large-scale studies that focused on qualitative approaches to detect morphological abnormalities of the Drosophila NMJ. A drawback of qualitative analyses is that many subtle players contributing to NMJ morphology likely remain unnoticed. Whereas quantitative analyses are required to detect the subtler morphological differences, such analyses are not yet commonly performed because they are laborious. This protocol describes in detail two image analysis algorithms "Drosophila NMJ Morphometrics" and "Drosophila NMJ Bouton Morphometrics", available as Fiji-compatible macros, for quantitative, accurate and objective morphometric analysis of the Drosophila NMJ. This methodology is developed to analyze NMJ terminals immunolabeled with the commonly used markers Dlg-1 and Brp. Additionally, its wider application to other markers such as Hrp, Csp and Syt is presented in this protocol. The macros are able to assess nine morphological NMJ features: NMJ area, NMJ perimeter, number of boutons, NMJ length, NMJ longest branch length, number of islands, number of branches, number of branching points and number of active zones in the NMJ terminal.</p>
+    
 
 
-    <h2>Request PDF</h2>
-
-    <p>A pdf file of this publication is available for personal use. Enter your e-mail address in the box below and press the button. You will receive an e-mail message with a link to the pdf file. Note: for this service you will be redirected to our PDF-service at <a href="www.radboudimaging.nl">radboudimaging.nl</a>.
-
-    <form method="post" action="http://shared.radboudimaging.nl/mediawiki/publication/confirmemail.php?bibkey=cast17&amp;ip=__USERIP__"><input type="text" name="email" size="50"><input type="submit" value="Send code by e-mail"></form>
     </div>
     </main>
 
@@ -273,7 +267,7 @@
         <div class="row">
             <div class="col-md-11 py-3 footer-content">
                 <p>
-                    <a href="https://github.com/diagnijmegen/website-content/edit/master/website-diag/content/pages/publications/cast17.md">&copy;</a>
+                    <a href="https://github.com/diagnijmegen/website-content/edit/master/website-diag/content/pages/publications/valk19a.md">&copy;</a>
 
                     Diagnostic Image Analysis Group 2017-2019. <a href="https://beta.diagnijmegen.nl/colofon">Colofon</a>.
                 </p>
