--- a/publications/index.html
+++ b/publications/index.html
@@ -1010,6 +1010,12 @@
         <!-- Getting list of pub_type -->
         <!-- Getting list of years -->
         <!-- Getting list of pub_type -->
+        <!-- Getting list of years -->
+        <!-- Getting list of pub_type -->
+        <!-- Getting list of years -->
+        <!-- Getting list of pub_type -->
+        <!-- Getting list of years -->
+        <!-- Getting list of pub_type -->
 
     <!-- Inpress keys should go here. To include "Accepted or to appear" section -->
 
@@ -1150,6 +1156,8 @@
                         <li>J. Bokhorst, L. Rijstenberg, D. Goudkade, I. Nagtegaal, J. van der Laak and F. Ciompi. "Automatic Detection of Tumor Budding in Colorectal Carcinoma with Deep Learning", in: <i>Computational Pathology and Ophthalmic Medical Image Analysis</i>, 2018. <a href="https://beta.diagnijmegen.nl/publications/bokh18a/">Abstract</a> <a href="https://doi.org/10.1007/978-3-030-00949-6_16">DOI</a> <a href="http://dx.doi.org/10.1007/978-3-030-00949-6_16/">URL</a></li>
 
                         <li>W. Bulten, C.A. Hulsbergen-van de Kaa, J. van der Laak and G.J. S. Litjens. "Automated segmentation of epithelial tissue in prostatectomy slides using deep learning", in: <i>Medical Imaging</i>, volume 10581 of SPIE, 2018, pages 105810S. <a href="https://beta.diagnijmegen.nl/publications/bult18/">Abstract</a> <a href="https://doi.org/10.1117/12.2292872">DOI</a></li>
+
+                        <li>D.J. Geijs, M. Intezar, J.A.W.M. van der Laak and G.J.S. Litjens. "Automatic color unmixing of IHC stained whole slide images", in: <i>Medical Imaging</i>, volume 10581 of SPIE, 2018. <a href="https://beta.diagnijmegen.nl/publications/geij18/">Abstract</a> <a href="https://doi.org/10.1117/12.2293734">DOI</a></li>
 
                         <li>M. Ghafoorian, J. Teuwen, R. Manniesing, F. de Leeuw, B. van Ginneken, N. Karssemeijer and B. Platel. "Student Beats the Teacher: Deep Neural Networks for Lateral Ventricles Segmentation in Brain MR", in: <i>Medical Imaging</i>, 2018, pages 105742U. <a href="https://beta.diagnijmegen.nl/publications/ghaf18/">Abstract</a> <a href="https://doi.org/10.1117/12.2293569">DOI</a> <a href="https://arxiv.org/abs/1801.05040/">arXiv</a></li>
 
@@ -1317,6 +1325,11 @@
                         <li>M. Silva, G. Capretti, N. Sverzellati, C. Jacobs, F. Ciompi, B. van Ginneken, C. M Schaefer-Prokop, M. Prokop, A. Marchiano and U. Pastorino. "Non-solid and Part-solid Nodules: Comparison Between Visual and Computer Aided Detection", in: <i>World Congress of Thoracic Imaging</i>, 2017. <a href="https://beta.diagnijmegen.nl/publications/silv17a/">Abstract</a></li>
 
                         <li>F.G. Venhuizen, S. Schaffhauser, V. Schreur, B. Liefers, B. van Ginneken, C.B. Hoyng, T. Theelen, E.K. de Jong and C.I. Sánchez. "Fully automated detection of hyperreflective foci in optical coherence tomography", in: <i>Association for Research in Vision and Ophthalmology</i>, 2017. <a href="https://beta.diagnijmegen.nl/publications/venh17/">Abstract</a></li>
+
+                    </ul>
+                                <h3>Theses</h3>
+                            <ul>
+                        <li>B.Ehteshami Bejnordi. "Histopathological diagnosis of breast cancer using machine learning" <i>PhD thesis</i>, 2017. <a href="https://beta.diagnijmegen.nl/publications/bejn17a/">Abstract</a> <a href="https://repository.ubn.ru.nl/bitstream/handle/2066/178907/178907.pdf?sequence=1/">URL</a></li>
 
                     </ul>
         <h2>2016</h2>
@@ -1732,6 +1745,8 @@
                         <li>X. Carrillo, E. Fernandez-Nofrerias, F. Ciompi, O. Rodriguez-Leor, P. Radeva, N. Salvatella, O. Pujol, J. Mauri and A. Bayes-Genis. "Changes in radial artery volume assessed using intravascular ultrasound: a comparison of two vasodilator regimens in transradial coronary interventions", <i>Journal of Invasive Cardiology</i> 2011;23:401-404. <a href="https://beta.diagnijmegen.nl/publications/carr11/">Abstract</a> <a href="http://europepmc.org/abstract/MED/21972156/">URL</a></li>
 
                         <li>A. Firouzian, R. Manniesing, H.Z. Flach, R. Risselada, F. van Kooten, M.C. Sturkenboom, A. van der Lugt and W.J. Niessen. "Intracranial Aneurysm Segmentation in 3D CT Angiography: Method and Quantitative Validation with and without Prior Noise Filtering", <i>European Journal of Radiology</i> 2011;79:299-304. <a href="https://beta.diagnijmegen.nl/publications/firo10/">Abstract</a> <a href="https://doi.org/10.1016/j.ejrad.2010.02.015">DOI</a> <a href="http://www.ncbi.nlm.nih.gov/pubmed/20346606/">URL</a> <a href="http://www.ncbi.nlm.nih.gov/pubmed/20346606/">PMID</a></li>
+
+                        <li>M. Kox, J.C. Pompe, E. Peters, Vaneker M., J.W. van der Laak, J.G. van der Hoeven, G.J. Scheffer, C.W. Hoedemaekers and P. Pickkers. "a7 Nicotinic acetylcholine receptor agonist GTS-21 attenuates ventilator-induced tumour necrosis factor-a production and lung injury", <i>British Journal of Anaesthesia</i> 2011;107(4):559-566. <a href="https://beta.diagnijmegen.nl/publications/kox11/">Abstract</a> <a href="https://doi.org/10.1093/bja/aer202">DOI</a></li>
 
                         <li>C.G. van Niekerk, C.A. Hulsbergen-van de Kaa, J.O. Barentsz, J.A. Witjes and J.A.W.M. van der Laak. "Quantitative analysis of lymph vessel characteristics in organ confined prostate cancer", <i>Prostate</i> 2011;71:91-97. <a href="https://beta.diagnijmegen.nl/publications/niek11/">Abstract</a> <a href="https://doi.org/10.1002/pros.21225">DOI</a> <a href="http://www.ncbi.nlm.nih.gov/pubmed/20632318/">PMID</a></li>
 
