--- a/vacancies/deep-learning-lung-immune-therapy/index.html
+++ b/vacancies/deep-learning-lung-immune-therapy/index.html
@@ -8,7 +8,7 @@
     <link rel="canonical" href="https://beta.diagnijmegen.nl/vacancies/deep-learning-lung-immune-therapy/">
 
 
-    <title>Deep Learning to predict lung cancer immune therapy response - Diagnostic Image Analysis Group</title>
+    <title>Deep Learning to predict lung cancer immunotherapy response - Diagnostic Image Analysis Group</title>
 
 
     <!-- Search Engine -->
@@ -16,19 +16,19 @@
     <meta name="image" content="https://beta.diagnijmegen.nl/images/vacancies/lung_projects_immuno.png">
 
     <!-- Schema.org for Google -->
-    <meta itemprop="name" content="Deep Learning to predict lung cancer immune therapy response - Diagnostic Image Analysis Group">
+    <meta itemprop="name" content="Deep Learning to predict lung cancer immunotherapy response - Diagnostic Image Analysis Group">
     <meta itemprop="description" content="Aim of the proposed project is to develop deep learning algorithms for the extraction of features from scanned H&E and immunohistochemically stained tissue sections from lung cancer which carry predictive value in the context of immune therapy treatment response.">
     <meta itemprop="image" content="https://beta.diagnijmegen.nl/images/vacancies/lung_projects_immuno.png">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="Deep Learning to predict lung cancer immune therapy response - Diagnostic Image Analysis Group">
+    <meta name="twitter:title" content="Deep Learning to predict lung cancer immunotherapy response - Diagnostic Image Analysis Group">
     <meta name="twitter:description" content="Aim of the proposed project is to develop deep learning algorithms for the extraction of features from scanned H&E and immunohistochemically stained tissue sections from lung cancer which carry predictive value in the context of immune therapy treatment response.">
     <meta name="twitter:creator" content="@diagnijmegen">
     <meta name="twitter:image:src" content="https://beta.diagnijmegen.nl/images/vacancies/lung_projects_immuno.png">
 
     <!-- Open Graph general (Facebook, Pinterest & Google+) -->
-    <meta property="og:title" content="Deep Learning to predict lung cancer immune therapy response - Diagnostic Image Analysis Group">
+    <meta property="og:title" content="Deep Learning to predict lung cancer immunotherapy response - Diagnostic Image Analysis Group">
     <meta property="og:description" content="Aim of the proposed project is to develop deep learning algorithms for the extraction of features from scanned H&E and immunohistochemically stained tissue sections from lung cancer which carry predictive value in the context of immune therapy treatment response.">
     <meta property="og:image" content="https://beta.diagnijmegen.nl/images/vacancies/lung_projects_immuno.png">
     <meta property="og:site_name" content="Diagnostic Image Analysis Group">
@@ -241,17 +241,17 @@
       <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="https://beta.diagnijmegen.nl/">Home</a></li>
         <li class="breadcrumb-item"><a href="https://beta.diagnijmegen.nl/vacancies/">Vacancies & Student projects</a></li>
-        <li class="breadcrumb-item">Deep Learning to predict lung cancer immune therapy response</li>
+        <li class="breadcrumb-item">Deep Learning to predict lung cancer immunotherapy response</li>
       </ol>
     </nav>
 </div>
     <div class="container">
-    <h1 class="page-title">Deep Learning to predict lung cancer immune therapy response</h1>
+    <h1 class="page-title">Deep Learning to predict lung cancer immunotherapy response</h1>
 
 
     <p class="alert alert-info">This is a student project vacancy.</p>
 
-    <img src="https://beta.diagnijmegen.nl/images/vacancies/lung_projects_immuno.png" alt="Deep Learning to predict lung cancer immune therapy response" class="img-fluid">
+    <img src="https://beta.diagnijmegen.nl/images/vacancies/lung_projects_immuno.png" alt="Deep Learning to predict lung cancer immunotherapy response" class="img-fluid">
 
     <div class="page-content">
         <h2>Background</h2>
