Pushing new version of website-diag

--- a/publications/venh17/index.html
+++ b/publications/venh17/index.html
@@ -255,7 +255,7 @@
     <p>
     </p>
     <h2>Abstract</h2>
-    <p>Purpose Diabetic macular edema (DME</p>
+    <p>Purpose Diabetic macular edema (DME) is a retinal disorder characterized by a buildup of cystoidal fluid in the retina. The typical treatment consists of monthly intravitreal anti vascular endothelial growth factor (anti-VEGF) injections. However, the efficacy of this treatment varies strongly. Recent studies have indicated that the presence and number of hyperreflective foci can possibly be considered a prognostic biomarker for treatment response in DME. As the detection of foci is difficult and time-consuming manual foci quantification seems infeasible. We therefore developed a fully automated system capable of detecting and quantifying foci in optical coherence tomography (OCT) images. Methods: 119 fovea centered B-scans obtained from 49 patients with DME were selected from a clinical database. The data was divided in a training set of 96 B-scans from 40 patients, and a test set containing 23 B</p>
 
 
     </div>
