--- a/research/index.html
+++ b/research/index.html
@@ -294,11 +294,11 @@
         <div class="card" >
             <img src="https://beta.diagnijmegen.nl/images/general/ApplicationsOfDeepLearning-480.png" class="card-img-top lazyload" style="height: 200px;">
             <div class="card-body" style="height: 250px;">
-                <h5 class="card-title"><a href="https://diagnijmegen.github.io/website-aiimnijmegen">DIAG Aiimnijmegen</a></h5>
+                <h5 class="card-title"><a href="https://www.aiimnijmegen.nl">DIAG Aiimnijmegen</a></h5>
                 <p class="card-text">Some introduction text that is placed on the home page.</p>
             </div>
             <div class="card-footer">
-              <a href="https://diagnijmegen.github.io/website-aiimnijmegen" class="btn btn-primary">Visit main website</a>
+              <a href="https://www.aiimnijmegen.nl" class="btn btn-primary">Visit main website</a>
             </div>
         </div>
     </div>
