--- a/publications/meij18c/index.html
+++ b/publications/meij18c/index.html
@@ -255,7 +255,7 @@
     <p>
     </p>
     <h2>Abstract</h2>
-    <p>PURPOSE</p>
+    <p>PURPOSE Nowadays 4D-CTA is available as a non-invasive alternative to conventional angiography, with reported high diagnostic accuracy in the evaluation of different neurovascular disorders, including arteriovenous shunts and collateral flow pathways. Optimized processing of 4D-CTA is crucial, considering the large amount of data generated. Enhanced visualization of 4D-CTA can be achieved by applying color-mapping of temporal information in the cerebral vasculature.</p>
 
 
     <h2>Request PDF</h2>
