Pushing new version of website-diag

--- a/publications/index.html
+++ b/publications/index.html
@@ -1016,6 +1016,16 @@
         <!-- Getting list of pub_type -->
         <!-- Getting list of years -->
         <!-- Getting list of pub_type -->
+        <!-- Getting list of years -->
+        <!-- Getting list of pub_type -->
+        <!-- Getting list of years -->
+        <!-- Getting list of pub_type -->
+        <!-- Getting list of years -->
+        <!-- Getting list of pub_type -->
+        <!-- Getting list of years -->
+        <!-- Getting list of pub_type -->
+        <!-- Getting list of years -->
+        <!-- Getting list of pub_type -->
 
     <!-- Inpress keys should go here. To include "Accepted or to appear" section -->
 
@@ -1076,7 +1086,11 @@
 
                         <li>C. Mercan, M. Balkenhol, J. van der Laak and F. Ciompi. "From Point Annotations to Epithelial Cell Detection in Breast Cancer Histopathology using RetinaNet", in: <i>Medical Imaging with Deep Learning</i>, 2019. <a href="https://beta.diagnijmegen.nl/publications/merc19/">Abstract</a> <a href="https://openreview.net/forum?id=BJlvCtU45E/">URL</a></li>
 
+                        <li>N. Moriakov, K. Michielsen, R. Mann, J. Adler, I. Sechopolous and J. Teuwen. "Deep learning framework for digital breast tomosynthesis reconstruction", in: <i>Medical Imaging</i>, 2019. <a href="https://beta.diagnijmegen.nl/publications/mor18/">Abstract</a> <a href="https://arxiv.org/abs/1808.04640/">arXiv</a></li>
+
                         <li>H. Pinckaers, W. Bulten and G. Litjens. "High resolution whole prostate biopsy classification using streaming stochastic gradient descent", in: <i>Medical Imaging</i>, 2019. <a href="https://beta.diagnijmegen.nl/publications/pinc19/">Abstract</a> <a href="https://doi.org/10.1117/12.2512817">DOI</a></li>
+
+                        <li>J. van Vugt, E. Marchiori, R. Mann, A. Gubern-Mérida, N. Moriakov and J. Teuwen. "Vendor-independent soft tissue lesion detection using weakly supervised and unsupervised adversarial domain adaptation", in: <i>Medical Imaging</i>, 2019. <a href="https://beta.diagnijmegen.nl/publications/vug18/">Abstract</a> <a href="https://doi.org/10.1117/12.2512940">DOI</a></li>
 
                     </ul>
                                 <h3>Preprints</h3>
@@ -1125,6 +1139,8 @@
                         <li>K. Chung, O.M. Mets, P.K. Gerke, C. Jacobs, A.M. den Harder, E.T. Scholten, M. Prokop, P.A. de Jong, B. van Ginneken and C.M. Schaefer-Prokop. "Brock malignancy risk calculator for pulmonary nodules: validation outside a lung cancer screening population", <i>Thorax</i> 2018;73:857-863. <a href="https://beta.diagnijmegen.nl/publications/chun18b/">Abstract</a> <a href="https://doi.org/10.1136/thoraxjnl-2017-211372">DOI</a> <a href="http://www.ncbi.nlm.nih.gov/pubmed/29777062/">PMID</a></li>
 
                         <li>B. Ehteshami Bejnordi, M. Mullooly, R.M. Pfeiffer, S. Fan, P.M. Vacek, D.L. Weaver, S. Herschorn, L.A. Brinton, B. van Ginneken, N. Karssemeijer, A.H. Beck, G.L. Gierach, J.A.W.M. van der Laak and M.E. Sherman. "Using deep convolutional neural networks to identify and classify tumor-associated stroma in diagnostic breast biopsies", <i>Modern Pathology</i> 2018;31(10):1502-1512. <a href="https://beta.diagnijmegen.nl/publications/ehte18/">Abstract</a> <a href="https://doi.org/10.1038/s41379-018-0073-z">DOI</a> <a href="http://www.ncbi.nlm.nih.gov/pubmed/29899550/">PMID</a></li>
+
+                        <li>M. Haase and N. Moriakov. "On systems with quasi-discrete spectrum", <i>Studia Mathematica</i> 2018;241(2):173-199. <a href="https://beta.diagnijmegen.nl/publications/haas18/">Abstract</a> <a href="https://doi.org/10.4064/sm8756-6-2017">DOI</a></li>
 
                         <li>G.E. Humpire Mamani, A. Setio, B. van Ginneken and C. Jacobs. "Efficient organ localization using multi-label convolutional neural networks in thorax-abdomen CT scans", <i>Physics in Medicine and Biology</i> 2018;63(8):085003. <a href="https://beta.diagnijmegen.nl/publications/hump18/">Abstract</a> <a href="https://doi.org/10.1088/1361-6560/aab4b3">DOI</a> <a href="http://iopscience.iop.org/article/10.1088/1361-6560/aab4b3/">URL</a> <a href="http://www.ncbi.nlm.nih.gov/pubmed/29512516/">PMID</a></li>
 
@@ -1263,6 +1279,8 @@
                         <li>M. Meijs, A. Patel, S. van de Leemput, M. Prokop, E. J van Dijk, F. de Leeuw, F.J. A. Meijer, B. van Ginneken and R. Manniesing. "Robust Segmentation of the Full Cerebral Vasculature in 4D CT Images of Suspected Stroke Patients", <i>Nature Scientific Reports</i> 2017;7. <a href="https://beta.diagnijmegen.nl/publications/meij17a/">Abstract</a> <a href="https://doi.org/10.1038/s41598-017-15617-w">DOI</a> <a href="https://www.nature.com/articles/s41598-017-15617-w/">URL</a> <a href="http://www.ncbi.nlm.nih.gov/pubmed/29142240/">PMID</a></li>
 
                         <li>T. Mertzanidou, J.H. Hipwell, S. Reis, D.J. Hawkes, B.E. Bejnordi, M. Dalmis, S. Vreemann, B. Platel, J. van der Laak, N. Karssemeijer, M. Hermsen, P. Bult and R. Mann. "3D volume reconstruction from serial breast specimen radiographs for mapping between histology and 3D whole specimen imaging", <i>Medical Physics</i> 2017;44:935-948. <a href="https://beta.diagnijmegen.nl/publications/mert17/">Abstract</a> <a href="https://doi.org/10.1002/mp.12077">DOI</a> <a href="http://www.ncbi.nlm.nih.gov/pubmed/28064435/">PMID</a></li>
+
+                        <li>N. Moriakov. "On Effective Birkhoff's Ergodic Theorem for Computable Actions of Amenable Groups", <i>Theory of Computing Systems</i> 2017. <a href="https://beta.diagnijmegen.nl/publications/mori17/">Abstract</a> <a href="https://doi.org/10.1007/s00224-017-9822-5">DOI</a> <a href="https://doi.org/10.1007/s00224-017-9822-5/">URL</a></li>
 
                         <li>M.T.H. Oei, F.J.A. Meijer, W. van der Woude, E.J. Smit, B. van Ginneken, R. Manniesing and M. Prokop. "Interleaving cerebral CT perfusion with neck CT angiography. Part II: clinical implementation and image quality", <i>European Radiology</i> 2017;27:2411-2418. <a href="https://beta.diagnijmegen.nl/publications/oei17/">Abstract</a> <a href="https://doi.org/10.1007/s00330-016-4592-z">DOI</a> <a href="http://www.ncbi.nlm.nih.gov/pubmed/27651144/">PMID</a></li>
 
@@ -1422,6 +1440,8 @@
                                 <h3>Theses</h3>
                             <ul>
                         <li>M. van Grinsven. "Automated analysis of retinal images for detection of age-related macular degeneration and diabetic retinopathy" <i>PhD thesis</i>, 2016. <a href="https://beta.diagnijmegen.nl/publications/grin16c/">Abstract</a> <a href="http://hdl.handle.net/2066/159478/">URL</a></li>
+
+                        <li>N. Moriakov. "Entropy and Kolmogorov complexity" <i>PhD thesis</i>, 2016. <a href="https://beta.diagnijmegen.nl/publications/mor16/">Abstract</a> <a href="https://doi.org/doi:10.4233/uuid:565eb3e7-e0ea-4a88-abbb-eb0ae2c6c36f">DOI</a> <a href="http://dx.doi.org/10.4233/uuid:565eb3e7-e0ea-4a88-abbb-eb0ae2c6c36f/">URL</a></li>
 
                     </ul>
                                 <h3>Other publications</h3>
