Pushing new version of website-diag

--- a/members/nikita-moriakov/index.html
+++ b/members/nikita-moriakov/index.html
@@ -294,7 +294,7 @@ His supervisor is Jonas Teuwen.</p></dd>
                   <dt>Member of:</dt>
                   <dd>
                     <ul>
-                        <li><a href="https://www.aiimnijmegen.nl">DIAG Aiimnijmegen</a></li>
+                        <li><a href="https://www.aiimnijmegen.nl">DIAG AIIM</a></li>
                     </ul>
                   </dd>
             </dl>
