--- a/members/index.html
+++ b/members/index.html
@@ -264,6 +264,11 @@ This page is generated automatically. Please do not change the content of this p
     <h4 class="person-title"><small>Assistant Professor</small></h4>
 </div>
 <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
+    <a href="https://beta.diagnijmegen.nl/members/jonas-teuwen/"><img data-src="https://beta.diagnijmegen.nl/images/people/Jonas_Teuwen.jpg" class="img-thumbnail rounded-circle lazyload" alt="Jonas Teuwen"></a>
+    <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/jonas-teuwen/">Jonas Teuwen</a></h3>
+    <h4 class="person-title"><small>Assistant professor</small></h4>
+</div>
+<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
     <a href="https://beta.diagnijmegen.nl/members/jeroen-van-der-laak/"><img data-src="https://beta.diagnijmegen.nl/images/people/Jeroen_van_der_Laak-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="Jeroen van der Laak"></a>
     <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/jeroen-van-der-laak/">Jeroen van der Laak</a></h3>
     <h4 class="person-title"><small>Associate professor/Group leader</small></h4>
@@ -396,6 +401,11 @@ This page is generated automatically. Please do not change the content of this p
     <a href="https://beta.diagnijmegen.nl/members/peter-bandi/"><img data-src="https://beta.diagnijmegen.nl/images/people/Péter_Bándi-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="Péter Bándi"></a>
     <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/peter-bandi/">Péter Bándi</a></h3>
     <h4 class="person-title"><small>PhD student</small></h4>
+</div>
+<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
+    <a href="https://beta.diagnijmegen.nl/members/riccardo-samperna/"><img data-src="https://beta.diagnijmegen.nl/images/people/Riccardo_Samperna-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="Riccardo Samperna"></a>
+    <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/riccardo-samperna/">Riccardo Samperna</a></h3>
+    <h4 class="person-title"><small>PhD candidate</small></h4>
 </div>
 <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
     <a href="https://beta.diagnijmegen.nl/members/sil-van-de-leemput/"><img data-src="https://beta.diagnijmegen.nl/images/people/Sil_van_de_Leemput-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="Sil van de Leemput"></a>
