--- a/members/index.html
+++ b/members/index.html
@@ -388,6 +388,11 @@ This page is generated automatically. Please do not change the content of this p
     <h4 class="person-title"><small>PhD candidate</small></h4>
 </div>
 <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
+    <a href="https://beta.diagnijmegen.nl/members/miguel-fernandes/"><img data-src="https://beta.diagnijmegen.nl/images/people/Miguel_Fernandes.jpg" class="img-thumbnail rounded-circle lazyload" alt="Miguel Fernandez"></a>
+    <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/miguel-fernandes/">Miguel Fernandez</a></h3>
+    <h4 class="person-title"><small>PhD candidate</small></h4>
+</div>
+<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
     <a href="https://beta.diagnijmegen.nl/members/nikita-moriakov/"><img data-src="https://beta.diagnijmegen.nl/images/people/Nikita_Moriakov-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="Nikita Moriakov"></a>
     <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/nikita-moriakov/">Nikita Moriakov</a></h3>
     <h4 class="person-title"><small>Postdoctoral researcher</small></h4>
