Pushing new version of website-diag

--- a/members/index.html
+++ b/members/index.html
@@ -378,6 +378,11 @@ This page is generated automatically. Please do not change the content of this p
     <h4 class="person-title"><small>Pathology resident and PhD student</small></h4>
 </div>
 <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
+    <a href="https://beta.diagnijmegen.nl/members/mehmet-dalmis/"><img data-src="https://beta.diagnijmegen.nl/images/people/Mehmet_Dalmis.jpg" class="img-thumbnail rounded-circle lazyload" alt="Mehmet Dalmis"></a>
+    <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/mehmet-dalmis/">Mehmet Dalmis</a></h3>
+    <h4 class="person-title"><small>PhD candidate</small></h4>
+</div>
+<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
     <a href="https://beta.diagnijmegen.nl/members/meyke-hermsen/"><img data-src="https://beta.diagnijmegen.nl/images/people/Meyke_Hermsen-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="Meyke Hermsen"></a>
     <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/meyke-hermsen/">Meyke Hermsen</a></h3>
     <h4 class="person-title"><small>PhD student</small></h4>
