--- a/publications/index.html
+++ b/publications/index.html
@@ -1058,6 +1058,10 @@
         <!-- Getting list of pub_type -->
         <!-- Getting list of years -->
         <!-- Getting list of pub_type -->
+        <!-- Getting list of years -->
+        <!-- Getting list of pub_type -->
+        <!-- Getting list of years -->
+        <!-- Getting list of pub_type -->
 
     <!-- Inpress keys should go here. To include "Accepted or to appear" section -->
 
@@ -1110,6 +1114,8 @@
                         <li>S. C. van de Leemput, M. Meijs, A. Patel, F.J.A. Meijer, B. van Ginneken and R. Manniesing. "Multiclass Brain Tissue Segmentation in 4D CT using Convolutional Neural Networks", <i> IEEE Access </i> 2019;7:51557-51569. <a href="https://beta.diagnijmegen.nl/publications/leem19/">Abstract</a> <a href="https://doi.org/10.1109/ACCESS.2019.2910348">DOI</a> <a href="https://ieeexplore.ieee.org/document/8686082/">URL</a></li>
 
                         <li>M. Veta, Y.J. Heng, N. Stathonikos, B. Ehteshami Bejnordi, F. Beca, T. Wollmann, K. Rohr, M.A. Shah, D. Wang, M. Rousson, M. Hedlund, D. Tellez, F. Ciompi, E. Zerhouni, D. Lanyi, M. Viana, V. Kovalev, V. Liauchuk, H. Ahmady Phoulady, T. Qaiser, S. Graham, N. Rajpoot, E. Sjöblom, J. Molin, K. Paeng, S. Hwang, S. Park, Z. Jia, E. I-Chao Chang, Y. Xu, A.H. Beck, P.J. van Diest and J.P. W. Pluim. "Predicting breast tumor proliferation from whole-slide images: the TUPAC16 challenge", <i>Medical Image Analysis</i> 2019;54(5):111-121. <a href="https://beta.diagnijmegen.nl/publications/veta18/">Abstract</a> <a href="https://doi.org/10.1016/j.media.2019.02.012">DOI</a> <a href="http://www.ncbi.nlm.nih.gov/pubmed/30861443/">PMID</a></li>
+
+                        <li>S. Vreemann, M.U. Dalmis, P. Bult, N. Karssemeijer, M.J.M. Broeders, A. Gubern-Mérida and R.M. Mann. "Amount of fibroglandular tissue FGT and background parenchymal enhancement BPE in relation to breast cancer risk and false positives in a breast MRI screening program : A retrospective cohort study", <i>European Radiology</i> 2019. <a href="https://beta.diagnijmegen.nl/publications/vree19/">Abstract</a> <a href="https://doi.org/10.1007/s00330-019-06020-2">DOI</a> <a href="http://www.ncbi.nlm.nih.gov/pubmed/30796568/">PMID</a></li>
 
                     </ul>
                                 <h3>Papers in conference proceedings</h3>
@@ -1517,6 +1523,8 @@
                         <li>F. Ciompi, B. de Hoop, S.J. van Riel, K. Chung, E. Th. Scholten, M. Oudkerk, P. A de Jong, M. Prokop and B. van Ginneken. "Automatic classification of pulmonary peri-fissural nodules in computed tomography using an ensemble of 2D views and a convolutional neural network out-of-the-box", <i>Medical Image Analysis</i> 2015;26:195-202. <a href="https://beta.diagnijmegen.nl/publications/ciom15a/">Abstract</a> <a href="https://doi.org/http://dx.doi.org/10.1016/j.media.2015.08.001">DOI</a> <a href="http://www.medicalimageanalysisjournal.com/article/S1361-8415(15)00125-5//">URL</a> <a href="http://www.ncbi.nlm.nih.gov/pubmed/26458112/">PMID</a></li>
 
                         <li>F. Ciompi, C. Jacobs, E. Scholten, M. Winkler Wille, P. de Jong, M. Prokop and B. van Ginneken. "Bag of frequencies: a descriptor of pulmonary nodules in Computed Tomography images", <i>IEEE Transactions on Medical Imaging</i> 2015;34:1-12. <a href="https://beta.diagnijmegen.nl/publications/ciom14c/">Abstract</a> <a href="https://doi.org/10.1109/TMI.2014.2371821">DOI</a> <a href="http://www.ncbi.nlm.nih.gov/pubmed/25420257/">PMID</a></li>
+
+                        <li>M.U. Dalmis and A. Akin. "Similarity analysis of functional connectivity with functional near-infrared spectroscopy.", <i>J Biomed Opt</i> 2015;20(8):86012. <a href="https://beta.diagnijmegen.nl/publications/dalm15c/">Abstract</a> <a href="https://doi.org/10.1117/1.JBO.20.8.086012">DOI</a> <a href="http://dx.doi.org/10.1117/1.JBO.20.8.086012/">URL</a> <a href="http://www.ncbi.nlm.nih.gov/pubmed/26296233/">PMID</a></li>
 
                         <li>M.J. J. P. van Grinsven, G.H. S. Buitendijk, C. Brussee, B. van Ginneken, C.B. Hoyng, T. Theelen, C.C. W. Klaver and C.I. Sánchez. "Automatic identification of reticular pseudodrusen using multimodal retinal image analysis", <i>Investigative Ophthalmology and Visual Science</i> 2015;56(1):633-639. <a href="https://beta.diagnijmegen.nl/publications/grin15/">Abstract</a> <a href="https://doi.org/10.1167/iovs.14-15019">DOI</a> <a href="http://www.ncbi.nlm.nih.gov/pubmed/25574052/">PMID</a></li>
 
