Pushing new version of website-diag

--- a/research/index.html
+++ b/research/index.html
@@ -295,7 +295,7 @@
             <img src="https://beta.diagnijmegen.nl/images/general/ApplicationsOfDeepLearning-480.png" class="card-img-top lazyload" style="height: 200px;">
             <div class="card-body" style="height: 250px;">
                 <h5 class="card-title"><a href="https://www.aiimnijmegen.nl">DIAG AIIM</a></h5>
-                <p class="card-text">Some introduction text that is placed on the home page.</p>
+                <p class="card-text">The AIIM Group develops, validates and deploys medical image analysis algorithms. Application areas include breast imaging, and radiotherapy applications.</p>
             </div>
             <div class="card-footer">
               <a href="https://www.aiimnijmegen.nl" class="btn btn-primary">Visit main website</a>
