Pushing new version of website-diag

--- a/vacancies/phd-marble-clinical/index.html
+++ b/vacancies/phd-marble-clinical/index.html
@@ -8,7 +8,7 @@
     <link rel="canonical" href="https://beta.diagnijmegen.nl/vacancies/phd-marble-clinical/">
 
 
-    <title>PhD position for Extraction of imaging biomarkers for AMD with Deep Learning - Diagnostic Image Analysis Group</title>
+    <title>PhD candidate to assess the value of Artificial Intelligence for Breast Cancer Screening - Diagnostic Image Analysis Group</title>
 
 
     <!-- Search Engine -->
@@ -16,19 +16,19 @@
     <meta name="image" content="https://beta.diagnijmegen.nl/images/">
 
     <!-- Schema.org for Google -->
-    <meta itemprop="name" content="PhD position for Extraction of imaging biomarkers for AMD with Deep Learning - Diagnostic Image Analysis Group">
+    <meta itemprop="name" content="PhD candidate to assess the value of Artificial Intelligence for Breast Cancer Screening - Diagnostic Image Analysis Group">
     <meta itemprop="description" content="We are offering a PhD position for our MARBLE project. In this project we will develop and validate artificial intelligence techniques for detection and classification of lesions on digital breast tomosynthesis and breast MRI.">
     <meta itemprop="image" content="https://beta.diagnijmegen.nl/images/">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="PhD position for Extraction of imaging biomarkers for AMD with Deep Learning - Diagnostic Image Analysis Group">
+    <meta name="twitter:title" content="PhD candidate to assess the value of Artificial Intelligence for Breast Cancer Screening - Diagnostic Image Analysis Group">
     <meta name="twitter:description" content="We are offering a PhD position for our MARBLE project. In this project we will develop and validate artificial intelligence techniques for detection and classification of lesions on digital breast tomosynthesis and breast MRI.">
     <meta name="twitter:creator" content="@diagnijmegen">
     <meta name="twitter:image:src" content="https://beta.diagnijmegen.nl/images/">
 
     <!-- Open Graph general (Facebook, Pinterest & Google+) -->
-    <meta property="og:title" content="PhD position for Extraction of imaging biomarkers for AMD with Deep Learning - Diagnostic Image Analysis Group">
+    <meta property="og:title" content="PhD candidate to assess the value of Artificial Intelligence for Breast Cancer Screening - Diagnostic Image Analysis Group">
     <meta property="og:description" content="We are offering a PhD position for our MARBLE project. In this project we will develop and validate artificial intelligence techniques for detection and classification of lesions on digital breast tomosynthesis and breast MRI.">
     <meta property="og:image" content="https://beta.diagnijmegen.nl/images/">
     <meta property="og:site_name" content="Diagnostic Image Analysis Group">
@@ -241,12 +241,12 @@
       <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="https://beta.diagnijmegen.nl/">Home</a></li>
         <li class="breadcrumb-item"><a href="https://beta.diagnijmegen.nl/vacancies/">Vacancies & Student projects</a></li>
-        <li class="breadcrumb-item">PhD position for Extraction of imaging biomarkers for AMD with Deep Learning</li>
+        <li class="breadcrumb-item">PhD candidate to assess the value of Artificial Intelligence for Breast Cancer Screening</li>
       </ol>
     </nav>
 </div>
     <div class="container">
-    <h1 class="page-title">PhD position for Extraction of imaging biomarkers for AMD with Deep Learning</h1>
+    <h1 class="page-title">PhD candidate to assess the value of Artificial Intelligence for Breast Cancer Screening</h1>
 
 
 
@@ -257,7 +257,7 @@
 <h2>Requirements</h2>
 <p>For this project the department of Radiology of the Radboud University Medical Center, Nijmegen (The Netherlands), is seeking an enthusiastic PhD student with a clear interest in the potential that AI techniques may have in the field of radiology. This is an excellent opportunity to assess and implement cutting-edge technology in order to have an impact on breast cancer research and personalized cancer treatment.
 You should be a creative and enthusiastic researcher with a MSc in a relevant field, such as medicine, technical medicine, medical image analysis, medical biology, clinical epidemiology, or similar. Good communication skills are essential.</p>
-<p><em>Specific requirements</em>
+<p><strong>Specific requirements</strong>
 Interest in medical imaging, with a particular focus on oncologic (breast) imaging and artificial intelligence. Interest in and preferably experience with scientific research. Independent work attitude. Basic skills in statistics (SPSS/R). Fluent in both Dutch (or willing to learn) and English.</p>
 <h2>Terms of employment</h2>
 <p>The project will appoint a PhD candidate for 3 years in total. Your performance will be evaluated after 1 year. If the evaluation is positive, the contract will be extended by another 2 years.
