Pushing new version of website-diag

--- a/index.html
+++ b/index.html
@@ -322,6 +322,26 @@
             </div>
         </div>
 
+    <div class="block">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 mb-4">
+                    <h1>Calendar</h1>
+                </div>
+            </div>
+            <dl class="row calendar">
+                  <dt class="col-md-2">September 12, 2019</dt>
+                  <dd class="col-md-10"><p>Mehmet Dalmis will defend his PhD thesis with the title' Automated Analysis of Breast MRI: from Traditional Methods into Deep Learning' at 12.30.</p></dd>
+                  <dt class="col-md-2">August 23, 2019</dt>
+                  <dd class="col-md-10"><p>Jan van Zelst will defend his PhD thesis with the title 'Automated 3D Breast Ultrasound. Advances in breast cancer detection, diagnosis and screening' at 14.30.</p></dd>
+            </dl>
+
+            <div class="row">
+              <div class="col-md-12 mb-4"><a href="https://beta.diagnijmegen.nl/calendar" class="btn btn-primary">All events</a></div>
+            </div>
+        </div>
+    </div>
+
 
     <div class="block">
       <div class="container">
