Pushing new version of website-diag

--- a/publications/ciom12a/index.html
+++ b/publications/ciom12a/index.html
@@ -252,7 +252,7 @@
             F. Ciompi
     </p>
     <img src="https://beta.diagnijmegen.nl/images/theses/Ciom12a.png">
-        <p><b>University of Barcelona</b></p>
+        <p><b>University of Barcelona, Spain</b></p>
         <p><b>
                 2012
         </b></p>
