--- a/publications/index.html
+++ b/publications/index.html
@@ -1062,6 +1062,12 @@
         <!-- Getting list of pub_type -->
         <!-- Getting list of years -->
         <!-- Getting list of pub_type -->
+        <!-- Getting list of years -->
+        <!-- Getting list of pub_type -->
+        <!-- Getting list of years -->
+        <!-- Getting list of pub_type -->
+        <!-- Getting list of years -->
+        <!-- Getting list of pub_type -->
 
     <!-- Inpress keys should go here. To include "Accepted or to appear" section -->
 
@@ -1095,9 +1101,11 @@
 
                         <li>M.C. Maas, G.J.S. Litjens, A.J. Wright, U.I. Attenberger, M.A. Haider, T.H. Helbich, B. Kiefer, K.J. Macura, D.J.A. Margolis, A.R. Padhani, K.M. Selnæs, G.M. Villeirs, J.J. Fütterer and T.W.J. Scheenen. "A Single-Arm, Multicenter Validation Study of Prostate Cancer Localization and Aggressiveness With a Quantitative Multiparametric Magnetic Resonance Imaging Approach", <i>Investigative Radiology</i> 2019. <a href="https://beta.diagnijmegen.nl/publications/maas19/">Abstract</a> <a href="https://doi.org/10.1097/RLI.0000000000000558">DOI</a> <a href="http://www.ncbi.nlm.nih.gov/pubmed/30946180/">PMID</a></li>
 
+                        <li>M. Meijs, S.A.H. Pegge, K. Murayama, H.D. Boogaarts, M. Prokop, P.W.A. Willems, R. Manniesing and F.J.A. Meijer. "Color mapping of 4D-CTA for the detection of cranial arteriovenous shunts", <i>American Journal of Neuroradiology</i> 2019. <a href="https://beta.diagnijmegen.nl/publications/meij19a/">Abstract</a> <a href="https://doi.org/10.3174/ajnr.A6156">DOI</a> <a href="http://www.ncbi.nlm.nih.gov/pubmed/31395664/">PMID</a></li>
+
                         <li>I.D. Munsterman, M. Van Erp, G. Weijers, C. Bronkhorst, C.L. de Korte, J.P. Drenth, J.A. van der Laak and E.T. Tjwa. "A Novel Automatic Digital Algorithm that Accurately Quantifies Steatosis in NAFLD on Histopathological Whole-Slide Images", <i>Cytometry Part B-Clinical Cytometry</i> 2019. <a href="https://beta.diagnijmegen.nl/publications/muns19a/">Abstract</a> <a href="https://doi.org/10.1093/alcalc/agy031">DOI</a></li>
 
-                        <li>A. Patel, S.C. van de Leemput, M. Prokop, B. van Ginneken and R. Manniesing. "Image Level Training and Prediction: Intracranial Hemorrhage Identification in 3D Non-Contrast CT", <i> IEEE Access </i> 2019. <a href="https://beta.diagnijmegen.nl/publications/pate19/">Abstract</a> <a href="https://doi.org/10.1109/ACCESS.2019.2927792">DOI</a> <a href="https://ieeexplore.ieee.org/document/8758429/">URL</a></li>
+                        <li>A. Patel, S.C. van de Leemput, M. Prokop, B. van Ginneken and R. Manniesing. "Image Level Training and Prediction: Intracranial Hemorrhage Identification in 3D Non-Contrast CT", <i> IEEE Access </i> 2019;7:92355-92364. <a href="https://beta.diagnijmegen.nl/publications/pate19/">Abstract</a> <a href="https://doi.org/10.1109/ACCESS.2019.2927792">DOI</a> <a href="https://ieeexplore.ieee.org/document/8758429/">URL</a></li>
 
                         <li>S.J. van Riel, C. Jacobs, E.T. Scholten, R. Wittenberg, M.M. Winkler Wille, B. de Hoop, R. Sprengers, O.M. Mets, B. Geurts, M. Prokop, C. Schaefer-Prokop and B. van Ginneken. "Observer variability for Lung-RADS categorisation of lung cancer screening CTs: impact on patient management", <i>European Radiology</i> 2019;29(2):924-931. <a href="https://beta.diagnijmegen.nl/publications/riel19/">Abstract</a> <a href="https://doi.org/10.1007/s00330-018-5599-4">DOI</a> <a href="http://www.ncbi.nlm.nih.gov/pubmed/30066248/">PMID</a></li>
 
@@ -1109,6 +1117,8 @@
 
                         <li>M. Tammemagi, A.J. Ritchie, S. Atkar-Khattra, B. Dougherty, C. Sanghera, J.R. Mayo, R. Yuan, D. Manos, A.M. McWilliams, H. Schmidt, M. Gingras, S. Pasian, L. Stewart, S. Tsai, J. M.Seely, P. Burrowes, R. Bhatia, E. A.Haider, C. Boylan, C. Jacobs, B. van Ginneken, M. Tsao, S. Lam and the Pan-Canadian Early Detection of Lung Cancer Study Group. "Predicting Malignancy Risk of Screen Detected Lung Nodules – Mean Diameter or Volume", <i>Journal of Thoracic Oncology</i> 2019;14:203-211. <a href="https://beta.diagnijmegen.nl/publications/tamm18/">Abstract</a> <a href="https://doi.org/10.1016/j.jtho.2018.10.006">DOI</a> <a href="http://www.ncbi.nlm.nih.gov/pubmed/30368011/">PMID</a></li>
 
+                        <li>D. Tellez, G. Litjens, J. van der Laak and F. Ciompi. "Neural Image Compression for Gigapixel Histopathology Image Analysis", <i>IEEE Transactions on Pattern Analysis and Machine Intelligence</i> 2019. <a href="https://beta.diagnijmegen.nl/publications/tell19/">Abstract</a></li>
+
                         <li>D. Valkenburg, E.H. Runhart, N.M. Bax, B. Liefers, S.L. Lambertus, C.I. Sánchez, F.P. Cremers and C.B. Hoyng. "Highly variable disease courses in siblings with Stargardt disease", <i>Ophthalmology</i> 2019. <a href="https://beta.diagnijmegen.nl/publications/valk19a/">Abstract</a> <a href="https://doi.org/10.1016/j.ophtha.2019.07.010">DOI</a></li>
 
                         <li>S. C. van de Leemput, M. Meijs, A. Patel, F.J.A. Meijer, B. van Ginneken and R. Manniesing. "Multiclass Brain Tissue Segmentation in 4D CT using Convolutional Neural Networks", <i> IEEE Access </i> 2019;7:51557-51569. <a href="https://beta.diagnijmegen.nl/publications/leem19/">Abstract</a> <a href="https://doi.org/10.1109/ACCESS.2019.2910348">DOI</a> <a href="https://ieeexplore.ieee.org/document/8686082/">URL</a></li>
@@ -1116,6 +1126,8 @@
                         <li>M. Veta, Y.J. Heng, N. Stathonikos, B. Ehteshami Bejnordi, F. Beca, T. Wollmann, K. Rohr, M.A. Shah, D. Wang, M. Rousson, M. Hedlund, D. Tellez, F. Ciompi, E. Zerhouni, D. Lanyi, M. Viana, V. Kovalev, V. Liauchuk, H. Ahmady Phoulady, T. Qaiser, S. Graham, N. Rajpoot, E. Sjöblom, J. Molin, K. Paeng, S. Hwang, S. Park, Z. Jia, E. I-Chao Chang, Y. Xu, A.H. Beck, P.J. van Diest and J.P. W. Pluim. "Predicting breast tumor proliferation from whole-slide images: the TUPAC16 challenge", <i>Medical Image Analysis</i> 2019;54(5):111-121. <a href="https://beta.diagnijmegen.nl/publications/veta18/">Abstract</a> <a href="https://doi.org/10.1016/j.media.2019.02.012">DOI</a> <a href="http://www.ncbi.nlm.nih.gov/pubmed/30861443/">PMID</a></li>
 
                         <li>S. Vreemann, M.U. Dalmis, P. Bult, N. Karssemeijer, M.J.M. Broeders, A. Gubern-Mérida and R.M. Mann. "Amount of fibroglandular tissue FGT and background parenchymal enhancement BPE in relation to breast cancer risk and false positives in a breast MRI screening program : A retrospective cohort study", <i>European Radiology</i> 2019. <a href="https://beta.diagnijmegen.nl/publications/vree19/">Abstract</a> <a href="https://doi.org/10.1007/s00330-019-06020-2">DOI</a> <a href="http://www.ncbi.nlm.nih.gov/pubmed/30796568/">PMID</a></li>
+
+                        <li>G. Aresta, C. Jacobs, T. Araújo, A. Cunha, I. Ramos, B. van Ginneken and A. Campilho. "iW-Net: an automatic and minimalistic interactive lung nodule segmentation deep network", <i>Nature Scientific Reports</i> 2019;9(11591). <a href="https://beta.diagnijmegen.nl/publications/ares19/">Abstract</a> <a href="https://doi.org/10.1038/s41598-019-48004-8">DOI</a> <a href="https://doi.org/10.1038/s41598-019-48004-8/">URL</a></li>
 
                     </ul>
                                 <h3>Papers in conference proceedings</h3>
@@ -1350,9 +1362,9 @@
 
                         <li>S.J. van Riel, F. Ciompi, M.M. Winkler Wille, A. Dirksen, S. Lam, E.T. Scholten, S.E. Rossi, N. Sverzellati, M. Naqibullah, R. Wittenberg, M.C. Hovinga-de Boer, M. Snoeren, L. Peters-Bax, O. Mets, M. Brink, M. Prokop, C. Schaefer-Prokop and B. van Ginneken. "Malignancy risk estimation of pulmonary nodules in screening CTs: Comparison between a computer model and human observers", <i>PLoS One</i> 2017;12:e0185032. <a href="https://beta.diagnijmegen.nl/publications/riel17a/">Abstract</a> <a href="https://doi.org/10.1371/journal.pone.0185032">DOI</a> <a href="http://www.ncbi.nlm.nih.gov/pubmed/29121063/">PMID</a></li>
 
-                        <li>A. Rodriguez-Ruiz, J. Teuwen, S. Vreemann, R.W. Bouwman, R.E. van Engen, N. Karssemeijer, R.M. Mann, A. Gubern-Merida and I. Sechopoulos. "New reconstruction algorithm for digital breast tomosynthesis: better image quality for humans and computers.", <i>Acta radiologica (Stockholm, Sweden : 1987)</i> 2017;284185117748487. <a href="https://beta.diagnijmegen.nl/publications/rodr17b/">Abstract</a> <a href="https://doi.org/10.1177/0284185117748487">DOI</a> <a href="http://www.ncbi.nlm.nih.gov/pubmed/29254355/">PMID</a></li>
-
                         <li>A. Rodriguez-Ruiz, J. Teuwen, S. Vreemann, R. W Bouwman, R. E van Engen, N. Karssemeijer, R. M Mann, A. Gubern-Merida and I. Sechopoulos. "New reconstruction algorithm for digital breast tomosynthesis: better image quality for humans and computers", <i>Acta Radiologica</i> 2017;028418511774848. <a href="https://beta.diagnijmegen.nl/publications/rodr17/">Abstract</a> <a href="https://doi.org/10.1177/0284185117748487">DOI</a></li>
+
+                        <li>A. Rodriguez-Ruiz, J. Teuwen, S. Vreemann, R.W. Bouwman, R.E. van Engen, N. Karssemeijer, R.M. Mann, A. Gubern-Merida and I. Sechopoulos. "New reconstruction algorithm for digital breast tomosynthesis: better image quality for humans and computers.", <i>Acta radiologica (Stockholm, Sweden : 1987)</i> 2017;284185117748487. <a href="https://beta.diagnijmegen.nl/publications/rodr17b/">Abstract</a> <a href="https://doi.org/10.1177/0284185117748487">DOI</a> <a href="http://www.ncbi.nlm.nih.gov/pubmed/29254355/">PMID</a></li>
 
                         <li>A.A.A. Setio, A. Traverso, T. de Bel, M.S.N. Berens, C.v.d. Bogaard, P. Cerello, H. Chen, Q. Dou, M.E. Fantacci, B. Geurts, R.v.d. Gugten, P.A. Heng, B. Jansen, M.M.J. de Kaste, V. Kotov, J.Y. Lin, J.T.M.C. Manders, A. Sóñora-Mengana, J.C. García-Naranjo, E. Papavasileiou, M. Prokop, M. Saletta, C.M. Schaefer-Prokop, E.T. Scholten, L. Scholten, M.M. Snoeren, E.L. Torres, J. Vandemeulebroucke, N. Walasek, G.C.A. Zuidhof, B.v. Ginneken and C. Jacobs. "Validation, comparison, and combination of algorithms for automatic detection of pulmonary nodules in computed tomography images: The LUNA16 challenge", <i>Medical Image Analysis</i> 2017;42:1-13. <a href="https://beta.diagnijmegen.nl/publications/seti17/">Abstract</a> <a href="https://doi.org/10.1016/j.media.2017.06.015">DOI</a> <a href="https://arxiv.org/abs/1612.08012/">arXiv</a> <a href="http://www.ncbi.nlm.nih.gov/pubmed/28732268/">PMID</a></li>
 
